@@ -1,6 +1,8 @@
 package by.rayden.paracoder.service;
 
 import by.rayden.paracoder.config.PatternProperties;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.FilenameUtils;
 import org.jetbrains.annotations.VisibleForTesting;
 import org.springframework.stereotype.Service;
@@ -15,6 +17,8 @@ import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
 @Service
+@Slf4j
+@RequiredArgsConstructor
 public class RecodeCommand {
     /**
      * Map to replace invalid characters in file name to HomoGlyphs
@@ -35,10 +39,6 @@ public class RecodeCommand {
 
     private static final DateTimeFormatter FFMPEG_TIME_FORMATTER = DateTimeFormatter.ofPattern("HH:mm:ss.SSS");
     private final PatternProperties patternProperties;
-
-    public RecodeCommand(PatternProperties patternProperties) {
-        this.patternProperties = patternProperties;
-    }
 
     public String getCommand(Path filePath) {
         String extension = FilenameUtils.getExtension(filePath.toString());
@@ -71,6 +71,7 @@ public class RecodeCommand {
         String filePath = trackPayload.getAudioFilePath().toString();
         final DecimalFormat numberFormater = new DecimalFormat("#00");
 
+        // Required values for placeholders. Cannot be null.
         return resolvePlaceholders(commandTemplate, filePath)
             .replace("{{CUE_ST}}", trackPayload.getStartTime().format(FFMPEG_TIME_FORMATTER))
             .replace("{{CUE_ET}}", trackPayload.getEndTime().format(FFMPEG_TIME_FORMATTER))
@@ -99,7 +100,7 @@ public class RecodeCommand {
         metadata.put("DISCID", trackPayload.getDiscId());
 
         return metadata.entrySet().stream()
-                       .filter(entry -> entry.getValue() != null && !entry.getValue().toString().trim().isEmpty())
+                       .filter(entry -> entry.getValue() != null && !entry.getValue().toString().isBlank())
                        .map(this::createMetadataCommand)
                        .collect(Collectors.joining(" ", " ", " "));
     }
